--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,60 +1,62 @@
 <!-- footer -->
 <!-- Example at bottom of this page: https://bellaria.cwsthemes.com/home-shop/# -->
-<div class="footer fixed-bottom">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6">
-        <h1>My Contacts</h1>
-        <div>
-          <p><i class="bx bxs-phone"></i>(305) 333-5522</p>
-          <p><i class="bx bxs-envelope"></i> MeowMeow@gmail.com</p>
+<footer>
+  <div class="footer fixed-bottom">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <h1>My Contacts</h1>
+          <div>
+            <p><i class="bx bxs-phone"></i>(305) 333-5522</p>
+            <p><i class="bx bxs-envelope"></i> MeowMeow@gmail.com</p>
+          </div>
+          <div class="social-icons">
+            <a href="https://www.facebook.com/"
+              ><i class="bx bxl-facebook"></i
+            ></a>
+            <a href="https://www.pinterest.com/"
+              ><i class="bx bxl-pinterest"></i
+            ></a>
+            <a href="https://www.instagram.com/"
+              ><i class="bx bxl-instagram-alt"></i
+            ></a>
+          </div>
         </div>
-        <div class="social-icons">
-          <a href="https://www.facebook.com/"
-            ><i class="bx bxl-facebook"></i
-          ></a>
-          <a href="https://www.pinterest.com/"
-            ><i class="bx bxl-pinterest"></i
-          ></a>
-          <a href="https://www.instagram.com/"
-            ><i class="bx bxl-instagram-alt"></i
-          ></a>
-        </div>
-      </div>
 
-      <div class="col-sm-6 order">
-        <h1>Order Now!</h1>
-        <form>
-          <div class="form-group">
-            <input
-              type="text"
-              class="form-control"
-              id="customer-name"
-              placeholder="Your Name"
-            />
-          </div>
-          <div class="form-group">
-            <input
-              type="email"
-              class="form-control"
-              id="customer-email"
-              placeholder="Your Email"
-            />
-          </div>
-          <div class="form-group">
-            <textarea
-              class="form-control"
-              id="customer-message"
-              rows="3"
-              placeholder="Type Message"
-            ></textarea>
-          </div>
-          <button type="submit" class="btn btn-light">Send</button>
-        </form>
+        <div class="col-sm-6 order">
+          <h1>Order Now!</h1>
+          <form>
+            <div class="form-group">
+              <input
+                type="text"
+                class="form-control"
+                id="customer-name"
+                placeholder="Your Name"
+              />
+            </div>
+            <div class="form-group">
+              <input
+                type="email"
+                class="form-control"
+                id="customer-email"
+                placeholder="Your Email"
+              />
+            </div>
+            <div class="form-group">
+              <textarea
+                class="form-control"
+                id="customer-message"
+                rows="3"
+                placeholder="Type Message"
+              ></textarea>
+            </div>
+            <button type="submit" class="btn btn-light">Send</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</footer>
 
 <!-- Boostrap Bundle, includes popper -->
 <!-- <script
