--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -40,7 +40,8 @@
                   sit amet mauris commodo quis. Proin sed libero enim sed
                   faucibus turpis in eu.
                 </p>
-                <button class="flip-box-button">Order</button>
+                <a href="/product-order" class="flip-box-button" >Order</a>
+                <button class="flip-box-button" type="button" >Order</button>
               </div>
             </div>
           </div>
@@ -511,7 +512,6 @@
     
 
   </body>
-  <footer>
+  
     <%- include('partials/footer')-%>
-  </footer>
 </html>
