--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -71,7 +71,7 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/order">Custom Order</a>
+                  <a class="dropdown-item" href="/custom-order">Custom Order</a>
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
