--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,9 +28,11 @@
     <!-- CSS -->
     <!-- <link href="../public/css/styles.css" rel="stylesheet" /> -->
   <!-- </head> -->
+  
+   <!-- navbar -->
+   <%- include('partials/navbar');-%>
   <body>
-    <!-- navbar -->
-    <%- include('partials/navbar');-%>
+   
 
     <!-- Hero -->
     <section class="hero" id="home">
@@ -52,103 +54,137 @@
 
     <!----------------------------------------------------- Home Page Sections -------------------------------------------->
     <!-- Specialty Cakes -->
-    <section id="" class="section specialties">
-      <div class="container">
-        <h1>Specialty Cakes</h1>
-        <div class="row">
-          <div class="col-lg-4 mb-4">
-            <div class="card mx-auto">
-              <img src="images/cake-4.jpg" alt="" class="card-img-top" />
-              <div class="card-body">
-                <h5 class="card-title">Chocolate Drip Cake</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut
-                  eum similique repellat a laborum.
-                </p>
-                <a href="/order" class="btn btn-outline-success btn-sm"
-                  >Read More</a
-                >
+    <section id="specialty-cakes" class="">
+      <div class="specialty">
+        <!-- row 1 -->
+          <!-- card1 -->
+          <div class="container menu-cards">
+            <div class="row">
+              <div class="col-md-12">
+                <h1>Chef's Picks</h1>
+              </div>
+              <div class="col-md-12">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4 mb-4">
-            <div class="card mx-auto">
-              <img src="images/cake.jpg" alt="" class="card-img-top" />
-              <div class="card-body">
-                <h5 class="card-title">Rustic Cake</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut
-                  eum similique repellat a laborum.
-                </p>
-                <a href="/order" class="btn btn-outline-success btn-sm"
-                  >Read More</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 mb-4">
-            <div class="card mx-auto">
-              <img src="images/cake-5-wide.jpg" alt="" class="card-img-top" />
-              <div class="card-body">
-                <h5 class="card-title">Mini Cake</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut
-                  eum similique repellat a laborum.
-                </p>
-                <a href="/order" class="btn btn-outline-success btn-sm"
-                  >Read More</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Special Offers -->
-    <!-- link to make better cards: https://www.youtube.com/watch?v=E2TW4ZxXrsI&ab_channel=CodingSnow  -->
-    <section id="special-offers">
-      <div class="section offers">
-        <div class="container">
-          <div>
-            <h1>Special Offers</h1>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 mb-6">
-              <div class="card mx-auto">
-                <img src="images/cookie.jpg" alt="" class="card-img-top" />
-                <div class="card-body">
-                  <h5 class="card-title">Chocolate Chip Cookies</h5>
-                  <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut
-                    eum similique repellat a laborum.
-                  </p>
-                  <a href="/order" class="btn btn-outline-success btn-sm"
-                    >Read More</a
+            <div class="row">
+              <div class="box-item col-md-12 col-lg-4">
+                <div class="flip-box mx-auto">
+                  <!-- front of box -->
+                  <div
+                    class="flip-box-front text-center"
+                    style="background-image: url('/images/cake-2.jpg')"
                   >
+                    <div class="inner color-white">
+                      <div class="front-header">
+                        <h3 class="flip-box-header">German <br> Chocolate Cake</h3>
+                      </div>
+                      <i class="bx bx-right-arrow-circle"></i>
+                    </div>
+                  </div>
+                  <!-- Back of box -->
+                  <div
+                    class="flip-box-back text-center"
+                    style="background-color: lightblue"
+                  >
+                    <div class="inner color-white">
+                      <h4 class="flip-box-header">German Chocolate Cake!</h4>
+                      <p>
+                        Lectus magna fringilla urna porttitor. Elit sed vulputate mi
+                        sit amet mauris commodo quis. Proin sed libero enim sed
+                        faucibus turpis in eu.
+                      </p>
+                      <button class="flip-box-button">Order</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- card2 -->
+              <div class="box-item col-md-12 col-lg-4">
+                <div class="flip-box mx-auto">
+                  <div
+                    class="flip-box-front text-center"
+                    style="background-image: url('/images/cake-3.jpg')"
+                  >
+                    <div class="inner color-white">
+                      <div class="front-header">
+                        <h3 class="flip-box-header">Strawberry <br> Shortcake</h3>
+                      </div>
+                      <i class="bx bx-right-arrow-circle"></i>
+                    </div>
+                  </div>
+                  <div
+                    class="flip-box-back text-center"
+                    style="background-color: lightblue"
+                  >
+                    <div class="inner color-white">
+                      <h3 class="flip-box-header">Strawberry Shortcake!</h3>
+                      <p>
+                        Lectus magna fringilla urna porttitor. Elit sed vulputate mi
+                        sit amet mauris commodo quis. Proin sed libero enim sed
+                        faucibus turpis in eu.
+                      </p>
+                      <button class="flip-box-button">Order</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- card3 -->
+              <div class="box-item col-md-12 col-lg-4">
+                <div class="flip-box mx-auto">
+                  <div
+                    class="flip-box-front text-center"
+                    style="background-image: url('/images/carrot-cake.jpg')"
+                  >
+                    <div class="inner color-white">
+                      <div class="front-header">
+                        <h3 class="flip-box-header">Carrot Cake</h3>
+                      </div>
+                      <i class="bx bx-right-arrow-circle"></i>
+                    </div>
+                  </div>
+                  <div
+                    class="flip-box-back text-center"
+                    style="background-color: lightblue"
+                  >
+                    <div class="inner color-white">
+                      <h3 class="flip-box-header">Carrot Cake!</h3>
+                      <p>
+                        Lectus magna fringilla urna porttitor. Elit sed vulputate mi
+                        sit amet mauris commodo quis. Proin sed libero enim sed
+                        faucibus turpis in eu.
+                      </p>
+                      <button class="flip-box-button">Order</button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 mb-6">
-              <div class="card mx-auto">
-                <img src="images/cupcake.jpg" alt="" class="card-img-top" />
-                <div class="card-body">
-                  <h5 class="card-title">Cupcakes</h5>
-                  <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut
-                    eum similique repellat a laborum.
-                  </p>
-                  <a href="/order" class="btn btn-outline-success btn-sm"
-                    >Read More</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
+    </div>
     </section>
 
+<!-- Ad section -->
+    <section>
+      <div class="page-container container ad-order">
+          <div class="row mx-auto">
+              <div class="col-md-6 ad-image my-auto">
+                  <h1>This will be an image.</h1>
+              </div>
+              <div class="col ad-header my-auto">
+                  <h1>Find Your Perfect Cake!</h1>
+                  <div class="row">
+                      <div class="col-md-12 ad-details">
+                        <p> Our menu offers lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                          <button class="col-md-12 button-74" type="submit">Make Order Now</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+  
+  
     <!-- My Creations -->
     <section id="my-creations">
       <div class="section creations">
@@ -201,6 +237,30 @@
         </div>
       </div>
     </section>
+
+
+<!-- Ad section -->
+<section>
+  <div class="ad-container container ad-order">
+      <div class="row mx-auto">
+          <div class="col ad-header my-auto">
+              <h1>Custom Bakes!</h1>
+              <div class="row">
+                  <div class="col-md-12 ad-details">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                      <button class="col-md-12 button-74" type="submit">Make Custom Order</button>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-6 ad-image my-auto">
+            <h1>This will be an image.</h1>
+         </div>
+      </div>
+  </div>
+</section>
+    
+
+
 
     <%- include('partials/footer');-%>
   </body>
